samples/_failures_safe/1761312889_62edf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a899b34b.c: In function ‘main’:
./samples/SAFE/__tmp_a899b34b.c:133:21: error: expected ‘;’ at end of input
  133 |         print_matrix
      |                     ^
      |                     ;
./samples/SAFE/__tmp_a899b34b.c:133:9: error: expected declaration or statement at end of input
  133 |         print_matrix
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_a899b34b.c:133:9: error: expected declaration or statement at end of input
